--- a/Coding Project/frontend/stock-advisor-frontend/package.json
+++ b/Coding Project/frontend/stock-advisor-frontend/package.json
@@ -13,7 +13,8 @@
     "apexcharts": "^3.54.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
